# errex

./: .dockerignore  .errex.yml  .gitignore  CHANGELOG.md  Dockerfile  README.md  RELEASE.md  action.yml  docker-compose.yml  errex.py  errex.spec  errex_app.py  pyproject.toml  web.py
.github/actions/explain/: action.yml
.github/workflows/: build-release.yml  ci.yml  errex-explain-example.yml  explain-failures.yml  publish-pypi.yml  publish-vscode.yml  publish.yml
deploy/: errex.service  nginx.conf
errex/: __init__.py  __main__.py  _constants.py  _first_run.py  _paths.py  _scan_scheduler.py  app_window.py  auto_scan.py  backup.py  build_explainer.py  cache.py  cli.py  cloud_sync.py  cluster.py  code_tools.py  config.py  core.py  digest.py  discord_notify.py  email_report.py  explainers.py  git_tools.py  github_actions.py  github_sync.py  history.py  init_cmd.py  jira_sync.py  launcher.py  license.py  linear_sync.py  mascot.py  mcp_server.py  output.py  pagerduty.py  patterns.py  project_config.py  prometheus.py  reports.py  restore_points.py  review_code.py  (+14 more)
errex/scanners/: __init__.py  _base.py  clamav.py  cve.py  diagnostics.py  linux.py  macos.py  malware.py  network.py  virustotal.py  windows.py
extensions/vscode/: .vscodeignore  README.md  package.json
extensions/vscode/src/: extension.ts
scripts/: build_mac.sh  build_win.bat  install.bat  install.sh  keygen.py
tests/: test_auto_scan.py  test_backup.py  test_build_explainer.py  test_chat_about.py  test_cloud_sync.py  test_cluster.py  test_cve_scanner.py  test_diagnostics.py  test_discord_notify.py  test_email_report.py  test_errex.py  test_explain_env_file.py  test_first_run.py  test_git_tools.py  test_github_action.py  test_github_actions.py  test_github_sync.py  test_init_cmd.py  test_integration.py  test_jira_sync.py  test_launcher.py  test_license.py  test_linear_sync.py  test_linux_scanner.py  test_macos_scanner.py  test_malware_scanner.py  test_mascot.py  test_mcp_server.py  test_network_scanner.py  test_pagerduty.py  test_patterns.py  test_patterns_new.py  test_project_config.py  test_prometheus.py  test_publishing_workflows.py  test_reports.py  test_restore_points.py  test_review_code.py  test_review_pr.py  test_scan.py  (+12 more)
website/: index.html
