[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "errex"
version = "0.20.0"
description = "Paste or pipe any error message and get a plain-English explanation powered by Claude"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Bsel153" }]
keywords = ["debugging", "errors", "ai", "claude", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Debuggers",
]
dependencies = ["anthropic", "rich"]

[project.urls]
Homepage = "https://github.com/Bsel153/errex"
Repository = "https://github.com/Bsel153/errex"
"Bug Tracker" = "https://github.com/Bsel153/errex/issues"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["errex*"]

[project.scripts]
errex = "errex.cli:main"
